--- a/src/QsCompiler/Compiler/Templates/QirDriverCpp.tt
+++ b/src/QsCompiler/Compiler/Templates/QirDriverCpp.tt
@@ -22,7 +22,8 @@
 
 using namespace Microsoft::Quantum;
 using namespace std;
-
+    
+<# if (CppInterop.AtLeastOneArrayArgument(entryPointOperation)) { #>
 struct InteropArray
 {
     int64_t Size;
@@ -32,6 +33,7 @@ struct InteropArray
         Size(size),
         Data(data){}
 };
+<# } #>
 
 using RangeTuple = tuple<int64_t, int64_t, int64_t>;
 struct InteropRange
@@ -52,34 +54,15 @@ struct InteropRange
 };
 
 // This is the function corresponding to the QIR entry-point.
-extern "C" void <#= entryPointOperation.Name #>(
-    <# foreach (var arg in entryPointOperation.Arguments) { #>
-        <# if (arg.Type == DataType.IntegerType) { #>
-    int64_t <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.ArrayType && arg.ArrayType == DataType.IntegerType) { #>
-    InteropArray* <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.DoubleType) { #>
-    double <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.ArrayType && arg.ArrayType == DataType.DoubleType) { #>
-    InteropArray* <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.BoolType) { #>
-    char <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.ArrayType && arg.ArrayType == DataType.BoolType) { #>
-    InteropArray* <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.PauliType) { #>
-    char <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.ArrayType && arg.ArrayType == DataType.PauliType) { #>
-    InteropArray* <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.RangeType) { #>
-    InteropRange* <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.ResultType) { #>
-    char <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.ArrayType && arg.ArrayType == DataType.ResultType) { #>
-    InteropArray* <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.StringType) { #>
-    const char* <#= arg.Name #>,
-        <# } #>
-    <# } #>
+extern "C" void <#= entryPointOperation.Name #>( // NOLINT
+<# for (int i = 0; i < entryPointOperation.Arguments.Count; i++) {
+    var arg = entryPointOperation.Arguments[i];
+    Write($"    {CppInterop.CppType(arg)} {arg.Name}");
+    if (i < entryPointOperation.Arguments.Count-1) {
+        WriteLine(",");
+    }
+} #>
+
 );
 
 const char InteropFalseAsChar = 0x0;
@@ -162,136 +145,74 @@ int main(int argc, char* argv[])
     // N.B. This option should be present in all standalone drivers.
     string simulationOutputFile;
     CLI::Option* simulationOutputFileOpt = app.add_option(
-        "-s,--simulation-output", simulationOutputFile,
+        "--simulation-output", simulationOutputFile,
         "File where the output produced during the simulation is written");
-
-    <# foreach (var arg in entryPointOperation.Arguments) { #>
-        <# if (arg.Type == DataType.IntegerType) { #>
-    // Add the options that correspond to the parameters that the QIR entry-point needs.
-    // Option for a Q# Int type.
-    int64_t <#= arg.Name #> = 0;
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "An integer value")->required();
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.IntegerType) { #>
-
-    // Option for a Q# Array<Int> type.
-    vector<int64_t> <#= arg.Name #>;
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "An integer array")->required();
-
-        <# } else if (arg.Type == DataType.DoubleType) { #>
-    // Option for a Q# Double type.
-    double_t <#= arg.Name #> = 0.0;
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "A double value")->required();
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.DoubleType) { #>
-
-    // Option for a Q# Array<Double> type.
-    vector<double_t> <#= arg.Name #>;
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "A double array")->required();
-
-        <# } else if (arg.Type == DataType.BoolType) { #>
-    // Option for a Q# Bool type.
-    char <#= arg.Name #> = InteropFalseAsChar;
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "A bool value")
-        ->required()
-        ->transform(CLI::CheckedTransformer(BoolAsCharMap, CLI::ignore_case));
-
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.BoolType) { #>
-    // Option for a Q# Array<Bool> type.
-    // N.B. For command line parsing, a char vector is used because vector<bool> is a specialized version of vector not
-    //      supported by CLI11.
-    vector<char> <#= arg.Name #>;
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "A bool array")
-        ->required()
-        ->transform(CLI::CheckedTransformer(BoolAsCharMap, CLI::ignore_case));
-        <# } else if (arg.Type == DataType.PauliType) { #>
-
-    PauliId <#= arg.Name #> = PauliId::PauliId_I;
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "A Pauli value")
-        ->required()
-        ->transform(CLI::CheckedTransformer(PauliMap, CLI::ignore_case));
-
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.PauliType) { #>
-    // Option for a Q# Array<Pauli> type.
-    std::vector<PauliId> <#= arg.Name #>;
-    app.add_option("--pauli-array", <#= arg.Name #>, "A Pauli array")
-        ->required()
-        ->transform(CLI::CheckedTransformer(PauliMap, CLI::ignore_case));
-        <# } else if (arg.Type == DataType.RangeType) { #>
-    // Option for Q# Range type.
-    // N.B. RangeTuple type is used here instead of QirRange because CLI11 supports tuple parsing which is leveraged and
-    //      the tuple is later translated to QirRange.
-    RangeTuple <#= arg.Name #>(0, 0, 0);
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "A Range value (start, step, end)")->required();
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.RangeType) { #>
-    // Option for a Q# Array<Range> type.
-    vector<RangeTuple> <#= arg.Name #>;
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "A Range array")->required();
-        <# } else if (arg.Type == DataType.ResultType) { #>
-    // Option for Q# Result type.
-    // N.B. This is implemented as a char rather than a boolean to be consistent with the way an array of results has to
-    //      be implemented.
-    char <#= arg.Name #> = InteropResultZeroAsChar;
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "A Result value")
-        ->required()
-        ->transform(CLI::CheckedTransformer(ResultAsCharMap, CLI::ignore_case));
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.ResultType) { #>
-    // Option for a Q# Array<Result> type.
-    // N.B. Similarly to the case of Q# Array<bool>, for command line parsing, a char vector is used because CLI11 does
-    //      not support vector<bool> since it is a specialized version of vector.
-    vector<char> <#= arg.Name #>;
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "A Result array")
-        ->required()
-        ->transform(CLI::CheckedTransformer(ResultAsCharMap, CLI::ignore_case));
-        <# } else if (arg.Type == DataType.StringType) { #>
-    // Option for Q# String type.
-    string <#= arg.Name #>;
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "A String value")->required();
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.StringType) { #>
-    // Option for a Q# Array<String> type.
-    vector<string> <#= arg.Name #>;
-    app.add_option("--<#= arg.Name #>", <#= arg.Name #>, "A String array")->required();
-        <# } #>
-    <# } #>
-
+    
+<# foreach (var arg in entryPointOperation.Arguments) {
+    WriteLine("");
+    WriteLine($"    {CppInterop.CppVarType(arg)} {arg.Name};"); 
+    if (CppInterop.CppVarInitialValue(arg) != null) { WriteLine($"    {arg.Name} = {CppInterop.CppVarInitialValue(arg)};"); }
+    WriteLine($"    app.add_option(\"{CppInterop.CliOptionString(arg)}\", {arg.Name}, \"{CppInterop.CliDescription(arg)}\")");
+    if (CppInterop.TransformationType(arg) == null) {
+        WriteLine("        ->required();");
+    } else {
+        WriteLine($"        ->required()->transform(CLI::CheckedTransformer({CppInterop.TransformationType(arg)}, CLI::ignore_case));");
+    }
+} #>
 
     // With all the options added, parse arguments from the command line.
     CLI11_PARSE(app, argc, argv);
 
-    <# foreach (var arg in entryPointOperation.Arguments) { #>
-        <# if (arg.Type == DataType.ArrayType && arg.Type == DataType.IntegerType) { #>
-    // Translate values to its final form after parsing.
-    // Create an interop array of integer values.
-    unique_ptr<InteropArray> <#= arg.Name #>Array = CreateInteropArray(<#= arg.Name #>);
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.DoubleType) { #>
-    // Create an interop array of double values.
-    unique_ptr<InteropArray> <#= arg.Name #>Array = CreateInteropArray(<#= arg.Name #>);
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.BoolType) { #>
-    // Create an interop array of bool values.
-    unique_ptr<InteropArray> <#= arg.Name #>Array = CreateInteropArray(<#= arg.Name #>);
-        <# } else if (arg.Type == DataType.PauliType) { #>
-    // Translate a PauliID value to its char representation.
-    char <#= arg.Name #>AsCharValue = TranslatePauliToChar(<#= arg.Name #>);
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.PauliType) { #>
-    // Create an interop array of Pauli values represented as chars.
-    vector<char> <#= arg.Name #>AsCharVector;
-    TranslateVector<PauliId, char>(<#= arg.Name #>, <#= arg.Name #>AsCharVector, TranslatePauliToChar);
-    unique_ptr<InteropArray> <#= arg.Name #>Array = CreateInteropArray(<#= arg.Name #>AsCharVector);
-        <# } else if (arg.Type == DataType.RangeType) { #>
-    // Create an interop range.
-    unique_ptr<InteropRange> <#= arg.Name #>Value = CreateInteropRange(<#= arg.Name #>);
-            <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.RangeType) { #>
-    vector<InteropRange*> <#= arg.Name #>Vector;
-    TranslateVector<RangeTuple, InteropRange*>(<#= arg.Name #>, <#= arg.Name #>Vector, TranslateRangeTupleToInteropRangePointer);
-    unique_ptr<InteropArray> <#= arg.Name #>Array = CreateInteropArray(<#= arg.Name #>Vector);
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.ResultType) { #>
-    // Create an interop array of Result values.
-    unique_ptr<InteropArray> <#= arg.Name #>Array = CreateInteropArray(<#= arg.Name #>);
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.StringType) { #>
-    // Create an interop array of String values.
-    vector<const char *> <#= arg.Name #>BufferVector;
-    TranslateVector<string, const char*>(<#= arg.Name #>, <#= arg.Name #>BufferVector, TranslateStringToCharBuffer);
-    unique_ptr<InteropArray> <#= arg.Name #>Array = CreateInteropArray(<#= arg.Name #>BufferVector);
-        <# } #>
-    <# } #>
+<# foreach (var arg in entryPointOperation.Arguments) {
+    switch (arg.Type) {
+        case DataType.PauliType:
+            WriteLine("    // Translate a PauliID value to its char representation.");
+            WriteLine($"    char {arg.Name}AsCharValue = TranslatePauliToChar({arg.Name});");
+            break;
+        case DataType.RangeType:
+            WriteLine("    // Create an interop range.");
+            WriteLine($"    unique_ptr<InteropRange> {arg.Name}Value = CreateInteropRange({arg.Name});");
+            break;
+        case DataType.ArrayType:
+            switch (arg.ArrayType) {
+                case DataType.IntegerType:
+                    WriteLine("    // Translate values to its final form after parsing.");
+                    WriteLine("    // Create an interop array of integer values.");
+                    WriteLine($"    unique_ptr<InteropArray> {arg.Name}Array = CreateInteropArray({arg.Name});");
+                    break;
+                case DataType.DoubleType:
+                    WriteLine("    // Create an interop array of double values.");
+                    WriteLine($"    unique_ptr<InteropArray> {arg.Name}Array = CreateInteropArray({arg.Name});");
+                    break;
+                case DataType.BoolType:
+                    WriteLine("    // Create an interop array of bool values.");
+                    WriteLine($"    unique_ptr<InteropArray> {arg.Name}Array = CreateInteropArray({arg.Name});");
+                    break;
+                case DataType.PauliType:
+                    WriteLine("    // Create an interop array of Pauli values represented as chars.");
+                    WriteLine($"    vector<char> {arg.Name}AsCharVector;");
+                    WriteLine($"    TranslateVector<PauliId, char>({arg.Name}, {arg.Name}AsCharVector, TranslatePauliToChar);");
+                    WriteLine($"    unique_ptr<InteropArray> {arg.Name}Array = CreateInteropArray({arg.Name}AsCharVector);");
+                    break;
+                case DataType.RangeType:
+                    WriteLine($"    vector<InteropRange*> {arg.Name}Vector;");
+                    WriteLine($"    TranslateVector<RangeTuple, InteropRange*>({arg.Name}, {arg.Name}Vector, TranslateRangeTupleToInteropRangePointer);");
+                    WriteLine($"    unique_ptr<InteropArray> {arg.Name}Array = CreateInteropArray({arg.Name}Vector);");
+                    break;
+                case DataType.ResultType:
+                    WriteLine("    // Create an interop array of Result values.");
+                    WriteLine($"    unique_ptr<InteropArray> {arg.Name}Array = CreateInteropArray({arg.Name});");
+                    break;
+                case DataType.StringType:
+                    WriteLine("    // Create an interop array of String values.");
+                    WriteLine($"    vector<const char *> {arg.Name}BufferVector;");
+                    WriteLine($"    TranslateVector<string, const char*>({arg.Name}, {arg.Name}BufferVector, TranslateStringToCharBuffer);");
+                    WriteLine($"    unique_ptr<InteropArray> {arg.Name}Array = CreateInteropArray({arg.Name}BufferVector);");
+                    break;
+            }
+            break;
+    }
+} #>
     // Redirect the simulator output from std::cout if the --simulation-output option is present.
     ostream* simulatorOutputStream = &cout;
     ofstream simulationOutputFileStream;
@@ -304,36 +225,38 @@ int main(int argc, char* argv[])
 
     // Run simulation and write the output of the operation to the corresponding stream.
     <#= entryPointOperation.Name #>(
-    <# foreach (var arg in entryPointOperation.Arguments) { #>
-        <# if (arg.Type == DataType.IntegerType) { #>
-        <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.IntegerType) { #>
-        <#= arg.Name #>Array.get(),
-        <# } else if (arg.Type == DataType.DoubleType) { #>
-        <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.DoubleType) { #>
-        <#= arg.Name #>Array.get(),
-        <# } else if (arg.Type == DataType.BoolType) { #>
-        <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.BoolType) { #>
-        <#= arg.Name #>Array.get(),
-        <# } else if (arg.Type == DataType.PauliType) { #>
-        <#= arg.Name #>AsCharValue,
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.PauliType) { #>
-        <#= arg.Name #>Array.get(),
-        <# } else if (arg.Type == DataType.RangeType) { #>
-        <#= arg.Name #>Value.get(),
-        <# } else if (arg.Type == DataType.ResultType) { #>
-        <#= arg.Name #>,
-        <# } else if (arg.Type == DataType.ArrayType && arg.Type == DataType.ResultType) { #>
-        <#= arg.Name #>Array.get(),
-        <# } else if (arg.Type == DataType.StringType) { #>
-        <#= arg.Name #>.c_str());
-        <# } #>
-    <# } #>
-    );
+<# for (int i = 0; i < entryPointOperation.Arguments.Count; i++) {
+    var arg = entryPointOperation.Arguments[i];
+    switch (arg.Type) {
+        case DataType.PauliType:
+            Write($"        {arg.Name}AsCharValue");
+            break;
+        case DataType.RangeType:
+            Write($"        {arg.Name}Value");
+            break;
+        case DataType.StringType:
+            Write($"        {arg.Name}.c_str()");
+            break;
+        case DataType.ArrayType:
+            Write($"        {arg.Name}Array.get()");
+            break;
+        default:
+            Write($"        {arg.Name}");
+            break;
+    }
+    if (i < entryPointOperation.Arguments.Count-1 ) {
+        WriteLine(",");
+    }
+} #>
 
-    FreePointerVector(rangeVector);
+);
+
+<# foreach (var arg in entryPointOperation.Arguments) {
+    if (arg.Type == DataType.ArrayType && arg.Type == DataType.RangeType) {
+        Write($"    FreePointerVector({arg.Name}Vector);");
+    }
+} #>
+
     simulatorOutputStream->flush();
     if (simulationOutputFileStream.is_open())
     {
